--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <div class="card video-container">
     <h2>Transmisión en Vivo</h2>
     <!-- 👇 Pega aquí el iframe oficial de YouTube (Compartir → Insertar) -->
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/HLIQ0YPFMdQ?si=uc2HDRq6SpN4plpb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <iframe src="https://player.twitch.tv/?channel=escuela_cienega_tacana&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
   </div>
 </body>
+
 </html>
