--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
   <div class="card video-container">
     <h2>Transmisión en Vivo</h2>
     <!-- 👇 Pega aquí el iframe oficial de YouTube (Compartir → Insertar) -->
-   <iframe src="https://player.twitch.tv/?channel=escuelacienega.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+   iframe src="https://player.twitch.tv/?channel=escuela_cienega_tacana&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
   </div>
 </body>
 
 </html>
+
 
 
