--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
   <div class="card">
-    <h2>Proyecto: Seguridad Solar</h2>
-    <p><strong>Lugar:</strong> San Marcos, Guatemala</p>
-    <p><strong>Ubicación:</strong> 14.9632, -91.7947</p>
-    <p><strong>Descripción:</strong> Monitoreo de área con cámara T-Day V380 Pro.</p>
+    <h2>Proyecto: AMPLIACION ESCUELA PRIMARIA CANTON CIENEGA ALDEA CHEQUIN, TACANA, SAN MARCOS</h2>
+    <p><strong>Lugar:</strong> CANTON CIENEGA ALDEA CHEQUIN, TACANA, SAN MARCOS</p>
+    <p><strong>Ubicación:</strong>  15°14'26.78"N,  92° 3'59.05"O</p>
+    <p><strong>Descripción:</strong> Construcción de Escuela Primaria.</p>
   </div>
 
   <div class="card video-container">
@@ -33,6 +33,7 @@
   </div>
 </body>
 </html>
+
 
 
 
